syntax = "proto3";

package image;

service ImageService {
  rpc GetImage (ImageRequest) returns (ImageResponse);
}

message ImageRequest {
  string id = 1;
}

message ImageResponse {
  string url = 1;
}

